UI hardening: Tailwind globs + darkMode, global CSS polish, portal root, FOUC fix

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>OmniBrowser</title>
     <style>
@@ -13,6 +14,13 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="portal-root"></div>
+    <script>
+      try {
+        const t = localStorage.getItem('theme');
+        if (t === 'dark') document.documentElement.classList.add('dark');
+      } catch (e) {}
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
