fix: Complete Days 3-7 implementation
- Added network optimization to index.html (preconnect/dns-prefetch)
- Fixed main.tsx to properly defer services after first paint
- All Days 3-7 features now complete

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
     <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+    <!-- DAY 7 FIX: Network optimization - preconnect to important domains -->
+    <link rel="preconnect" href="https://api.duckduckgo.com" />
+    <link rel="preconnect" href="https://api-inference.huggingface.co" />
+    <link rel="dns-prefetch" href="https://api.openai.com" />
+    <link rel="dns-prefetch" href="https://api.anthropic.com" />
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       html, body { height: 100%; width: 100%; }
